chore: super user for database

--- a/internal/i18n/json/zh-Hans.json
+++ b/internal/i18n/json/zh-Hans.json
@@ -43,6 +43,16 @@
     "validation.database.name_error": "数据库名称必须以字母开头，只能包含字母、数字和下划线（最大63个字符）",
     "validation.database.username_error": "用户名必须以字母开头，只能包含字母、数字和下划线（最大63个字符）",
     "validation.database.password_error": "数据库密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
+    "validation.database.super_user_required": "数据库超级用户为必填项",
+    "validation.database.super_password_required": "数据库超级用户密码为必填项",
+    "validation.database.app_user_required": "数据库应用用户为必填项",
+    "validation.database.app_password_required": "数据库应用用户密码为必填项",
+    "validation.database.super_user_error": "超级用户名必须以字母开头，只能包含字母、数字和下划线（最大63个字符）",
+    "validation.database.super_password_error": "超级用户密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
+    "validation.database.app_user_error": "应用用户名必须以字母开头，只能包含字母、数字和下划线（最大63个字符）",
+    "validation.database.app_password_error": "应用密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
+    "validation.database.username_duplicate_error": "应用用户名必须与超级用户名不同",
+    "validation.database.password_duplicate_error": "应用密码必须与超级用户密码不同",
     "validation.redis.host_error": "请输入有效的主机名或IP地址",
     "validation.redis.port_error": "端口必须在 1 到 65535 之间",
     "validation.redis.password_error": "Redis密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）",
