--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -43,6 +43,16 @@
     "validation.database.name_error": "Database name must start with a letter and contain only letters, numbers, and underscores (max 63 characters)",
     "validation.database.username_error": "Username must start with a letter and contain only letters, numbers, and underscores (max 63 characters)",
     "validation.database.password_error": "Database password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)",
+    "validation.database.super_user_required": "Database super user is required",
+    "validation.database.super_password_required": "Database super password is required",
+    "validation.database.app_user_required": "Database app user is required",
+    "validation.database.app_password_required": "Database app password is required",
+    "validation.database.super_user_error": "Super user must start with a letter and contain only letters, numbers, and underscores (max 63 characters)",
+    "validation.database.super_password_error": "Super password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)",
+    "validation.database.app_user_error": "App user must start with a letter and contain only letters, numbers, and underscores (max 63 characters)",
+    "validation.database.app_password_error": "App password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)",
+    "validation.database.username_duplicate_error": "Application username must be different from super user username",
+    "validation.database.password_duplicate_error": "Application password must be different from super user password",
     "validation.redis.host_error": "Please enter a valid hostname or IP address",
     "validation.redis.port_error": "Port must be between 1 and 65535",
     "validation.redis.password_error": "Redis password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)",
