--- a/internal/i18n/json/en.json
+++ b/internal/i18n/json/en.json
@@ -135,5 +135,25 @@
     "messages.performing_post_deployment_health_checks": "Performing post-deployment health checks...",
     "messages.some_services_failed_health_check": "Some services failed health check",
     "messages.all_services_are_healthy": "All services are healthy",
-    "messages.setup_completed_service_available": "Setup completed successfully - service remains available for updates"
+    "messages.setup_completed_service_available": "Setup completed successfully - service remains available for updates",
+    "messages.database_config_validated": "Database configuration validated",
+    "messages.redis_config_validated": "Redis configuration validated",
+    "messages.app_user_external_error": "App user must be 128 characters or less for external services",
+    "messages.app_password_external_error": "App password must be 1-128 characters and cannot contain control characters",
+    "validation.database.app_user_external_error": "App user must be 128 characters or less for external services",
+    "validation.database.app_password_external_error": "App password must be 1-128 characters and cannot contain control characters",
+    "messages.unauthorized_setup_token_required": "Unauthorized: Valid setup token required",
+    "messages.loading_setup_interface": "Loading setup interface...",
+    "messages.failed_to_encode_response": "Failed to encode response",
+    "messages.setup_initialized_successfully": "Setup initialized successfully",
+    "messages.setup_completed_tokens_invalidated": "Setup completed successfully - tokens invalidated",
+    "messages.storage_setup_completed": "Setup completed successfully",
+    "validation.database.service_type_error": "Database service type must be 'docker' or 'external'",
+    "validation.database.host_docker_error": "Database host must be 'localhost' when using docker compose",
+    "validation.redis.service_type_error": "Redis service type must be 'docker' or 'external'",
+    "validation.redis.host_docker_error": "Redis host must be 'localhost' when using docker compose",
+    "validation.redis.password_required": "Redis password is required",
+    "validation.redis.password_external_error": "Redis password must be 1-128 characters and cannot contain control characters",
+    "validation.redis.admin_password_required": "Redis CLI management password is required for Docker mode",
+    "validation.redis.admin_password_error": "Redis CLI password must be 12-64 characters with at least 3 types: lowercase, uppercase, numbers, special characters (!@#$%^&*)"
 }
