--- a/internal/i18n/json/zh-Hans.json
+++ b/internal/i18n/json/zh-Hans.json
@@ -135,5 +135,25 @@
     "messages.performing_post_deployment_health_checks": "正在执行部署后健康检查...",
     "messages.some_services_failed_health_check": "部分服务健康检查失败",
     "messages.all_services_are_healthy": "所有服务都很健康",
-    "messages.setup_completed_service_available": "设置成功完成 - 服务保持可用以进行更新"
+    "messages.setup_completed_service_available": "设置成功完成 - 服务保持可用以进行更新",
+    "messages.database_config_validated": "数据库配置验证通过",
+    "messages.redis_config_validated": "Redis配置验证通过",
+    "messages.app_user_external_error": "外部服务的应用用户名不得超过128个字符",
+    "messages.app_password_external_error": "应用密码必须是1-128个字符且不能包含控制字符",
+    "validation.database.app_user_external_error": "外部服务的应用用户名不得超过128个字符",
+    "validation.database.app_password_external_error": "应用密码必须是1-128个字符且不能包含控制字符",
+    "messages.unauthorized_setup_token_required": "未授权：需要有效的设置令牌",
+    "messages.loading_setup_interface": "正在加载设置界面...",
+    "messages.failed_to_encode_response": "编码响应失败",
+    "messages.setup_initialized_successfully": "设置初始化成功",
+    "messages.setup_completed_tokens_invalidated": "设置完成成功 - 令牌已失效",
+    "messages.storage_setup_completed": "设置完成成功",
+    "validation.database.service_type_error": "数据库服务类型必须是 'docker' 或 'external'",
+    "validation.database.host_docker_error": "使用docker compose时数据库主机必须是 'localhost'",
+    "validation.redis.service_type_error": "Redis服务类型必须是 'docker' 或 'external'",
+    "validation.redis.host_docker_error": "使用docker compose时Redis主机必须是 'localhost'",
+    "validation.redis.password_required": "Redis密码为必填项",
+    "validation.redis.password_external_error": "Redis密码必须是1-128个字符且不能包含控制字符",
+    "validation.redis.admin_password_required": "Docker模式下需要Redis CLI管理密码",
+    "validation.redis.admin_password_error": "Redis CLI密码必须是12-64个字符，至少包含3种类型：小写字母、大写字母、数字、特殊字符（!@#$%^&*）"
 }
